--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -582,6 +582,7 @@
     <string name="status_bar_logo_position_left">Left</string>
     <string name="status_bar_logo_style">Logo style</string>
     <string name="status_bar_logo_style_nad">Default (Nusantara)</string>
+    <string name="status_bar_logo_style_nadq">Nusantara Q</string>
     <string name="status_bar_logo_style_du">Dirty Unicorns</string>
     <string name="status_bar_logo_style_android">Android</string>
     <string name="status_bar_logo_style_apple">Apple</string>
